--- a/exercicios/ex022/fundo06.html
+++ b/exercicios/ex022/fundo06.html
@@ -7,16 +7,26 @@
     <title></title>
     <style>
         body {
-            height: 100vh;
+            height: 100vh;/*
             background-color: black;
             background-image: url('https://images.pexels.com/photos/36717/amazing-animal-beautiful-beautifull.jpg');
             background-position: center center ;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+
+            /* Shorthand - background
+            color > image > position > repeat > {size} > attachment
+            */
+
+            background: black url('https://images.pexels.com/photos/36717/amazing-animal-beautiful-beautifull.jpg') center center no-repeat fixed;
+
+            background-size: cover;
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
+            text-indent: 20px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,6 +38,16 @@
     <main>
         <h1>Teste de Imagens de fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eos eveniet fugit id quo porro excepturi sequi atque libero, officia vero aut quae, assumenda eius pariatur ut velit ipsum suscipitlorem
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore animi cumque beatae quam sed, ullam nulla illum, accusamus impedit iste quis explicabo voluptas minima repudiandae exercitationem at placeat. Illum, animi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, saepe. Rem, at cum. A, obcaecati unde mollitia ipsam in eum, doloremque optio doloribus autem excepturi quas distinctio ex voluptas. Assumenda?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eos eveniet fugit id quo porro excepturi sequi atque libero, officia vero aut quae, assumenda eius pariatur ut velit ipsum suscipitlorem
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore animi cumque beatae quam sed, ullam nulla illum, accusamus impedit iste quis explicabo voluptas minima repudiandae exercitationem at placeat. Illum, animi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, saepe. Rem, at cum. A, obcaecati unde mollitia ipsam in eum, doloremque optio doloribus autem excepturi quas distinctio ex voluptas. Assumenda?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eos eveniet fugit id quo porro excepturi sequi atque libero, officia vero aut quae, assumenda eius pariatur ut velit ipsum suscipitlorem
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore animi cumque beatae quam sed, ullam nulla illum, accusamus impedit iste quis explicabo voluptas minima repudiandae exercitationem at placeat. Illum, animi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, saepe. Rem, at cum. A, obcaecati unde mollitia ipsam in eum, doloremque optio doloribus autem excepturi quas distinctio ex voluptas. Assumenda?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eos eveniet fugit id quo porro excepturi sequi atque libero, officia vero aut quae, assumenda eius pariatur ut velit ipsum suscipitlorem
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore animi cumque beatae quam sed, ullam nulla illum, accusamus impedit iste quis explicabo voluptas minima repudiandae exercitationem at placeat. Illum, animi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, saepe. Rem, at cum. A, obcaecati unde mollitia ipsam in eum, doloremque optio doloribus autem excepturi quas distinctio ex voluptas. Assumenda?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eos eveniet fugit id quo porro excepturi sequi atque libero, officia vero aut quae, assumenda eius pariatur ut velit ipsum suscipitlorem
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore animi cumque beatae quam sed, ullam nulla illum, accusamus impedit iste quis explicabo voluptas minima repudiandae exercitationem at placeat. Illum, animi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, saepe. Rem, at cum. A, obcaecati unde mollitia ipsam in eum, doloremque optio doloribus autem excepturi quas distinctio ex voluptas. Assumenda?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eos eveniet fugit id quo porro excepturi sequi atque libero, officia vero aut quae, assumenda eius pariatur ut velit ipsum suscipitlorem
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore animi cumque beatae quam sed, ullam nulla illum, accusamus impedit iste quis explicabo voluptas minima repudiandae exercitationem at placeat. Illum, animi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, saepe. Rem, at cum. A, obcaecati unde mollitia ipsam in eum, doloremque optio doloribus autem excepturi quas distinctio ex voluptas. Assumenda?
         </p>
     </main>
