--- a/exercicios/ex022/fundo07.html
+++ b/exercicios/ex022/fundo07.html
@@ -7,23 +7,23 @@
     <title>Alinhamento vertical</title>
     <style>
         #container {
+            position: relative;
+            background-color: purple;
             background-image: url('imagens/target001.png');
             background-size: 100% 100%;
-            position: relative;
-            height: 500px;
-            padding: 10px;
-            background-color: purple;
+            height:98vh;
         }
 
         #conteudo {
+            position: absolute;
+            background-color: yellow;
             background-image: url('imagens/target001.png');
             background-size: 100% 100%;
-            position: absolute;
             height: 200px;
-            background-color: yellow;
-            width: 400px;
-            left: 50%;
-            top: 50%;
+            width: 300px;
+           left: 50%;
+           top: 50%;
+           transform: translate(-50%, -50%);
         }
     </style>
 </head>
