--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -7,82 +7,31 @@
     <title>Tabelas</title>
     <style>
 
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        table {
-            width: 400px;
-            border-collapse: collapse;
-            border: 2px solid blue;
-        }
-        td {
-            border: 1px solid black;
-            padding: 8px;
-        }
-
-        tr.linha {
-            background-color: gray;
-        }
-
-        td.dado {
-            background-color: yellow;
-        }
     </style>
 </head>
 <body>
     <h1>Minha primeira tabela</h1>
     <!--
         HIERARQUIA DE TABELAS (simples)
-        table = tabela
-             table row = linha de tabelas
-                   table header = cabeçalho de tabelo
-                   table data = dado de tabela
-
+        TABLE = tabela
+            TABLE ROW = linha de tabela
+            TABLE DATA =dado de tabela
     -->
-    <table>
-        <tr> <!--Primeira linha-->
+    <table> <!--Primeira linha-->
+        <tr>
             <td>A1</td>
             <td>B1</td>
             <td>C1</td>
-            <td>D1</td>
         </tr>
-        <tr class="linha"> <!--Segunda linha-->
+        <tr> <!--Segunda linha-->
             <td>A2</td>
             <td>B2</td>
             <td>C2</td>
-            <td>D2</td>
         </tr>
         <tr> <!--Terceira linha-->
             <td>A3</td>
-            <td class="dado">B3</td>
-            <td class="dado">C3</td>
-            <td>D3</td>
-        </tr>
-        <tr class="linha"> <!--Quarta linha-->
-            <td>A4</td>
-            <td>B4</td>
-            <td>C4</td>
-            <td>D4</td>
-        </tr>
-        <tr>
-            <td>A5</td>
-            <td>B5</td>
-            <td>C5</td>
-            <td>D5</td>
-            <td>E5</td>
-            <td>F5</td>
-            <td>J5</td>
-            <td>G5</td>
-        </tr>
-        <tr>
-            <td>A6</td>
-            <td>B6</td>
-            <td>C6</td>
-            <td>D6</td>
-            <td>E6</td>
-            <td>F6</td>
-            <td>G6</td>
-            <td>G6</td>
+            <td>B3</td>
+            <td>C3</td>
         </tr>
     </table>
 </body>
