--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -7,6 +7,26 @@
     <title>Tabelas</title>
     <style>
 
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        table {
+            width: 400px;
+            height: 400px;
+            border-collapse: collapse;
+        }
+
+        td {
+            border: 1px solid black;
+            padding: 5px;
+            text-align: center; /* Alinhamento horinzontal*/
+            vertical-align: top; /* Alinhamento vertical*/
+        }
+
+        td.numero{
+            text-align: right;
+        }
+
     </style>
 </head>
 <body>
@@ -23,15 +43,20 @@
             <td>B1</td>
             <td>C1</td>
         </tr>
-        <tr> <!--Segunda linha-->
+        <tr class="cor1"> <!--Segunda linha-->
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>
         <tr> <!--Terceira linha-->
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
+        </tr>
+        <tr>
+            <td>A4</td>
+            <td>B4</td>
+            <td>C4</td>
         </tr>
     </table>
 </body>
