--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -20,11 +20,14 @@
             border-collapse: collapse;
         }
 
-        td, tr {
+        tr {
+           
+        }
+
+        td, th {
             border: 1px solid black;
             padding: 10px;
         }
-
     </style>
 </head>
 <body>
@@ -47,6 +50,7 @@
             </tr>
         </thead>
         <tbody>
+            
             <tr>
                 <td>São Paulo</td>
                 <td>41 262 199</td>
@@ -55,12 +59,18 @@
                 <td>Minas Gerais</td>
                 <td>19 597 330</td>
             </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td>15 989 929</td>
+            </tr>
+
         </tbody>
         <tfoot>
             <tr>
                 <th>Total de Habitantes</th>
                 <td>0000</td>
             </tr>
+
         </tfoot>
     </table>
 </body>
