--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -28,6 +28,19 @@
             border: 1px solid black;
             padding: 10px;
         }
+
+        a {
+            text-decoration: none;
+            color: rgb(0, 0, 223);
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        td.num {
+            text-align: right;
+        }
     </style>
 </head>
 <body>
@@ -50,27 +63,121 @@
             </tr>
         </thead>
         <tbody>
-            
-            <tr>
-                <td>São Paulo</td>
-                <td>41 262 199</td>
-            </tr>
-            <tr>
-                <td>Minas Gerais</td>
-                <td>19 597 330</td>
-            </tr>
-            <tr>
-                <td>Rio de Janeiro</td>
-                <td>15 989 929</td>
-            </tr>
 
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/S%C3%A3o_Paulo_(estado)">São Paulo</a></td>
+                <td class="num">41 262 199</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Minas_Gerais">Minas Gerais</a></td>
+                <td class="num">19 597 330</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Rio_de_Janeiro_(estado)">Rio de Janeiro</a></td>
+                <td class="num">15 989 929</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Bahia">Bahia</a></td>
+                <td class="num">14 985 284</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Paran%C3%A1">Paraná</a></td>
+                <td class="num">11 597 484</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Rio_Grande_do_Sul">Rio Grande do Sul</a></td>
+                <td class="num">11 466 630</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Pernambuco">Pernambuco</a></td>
+                <td class="num">9 674 793</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Cear%C3%A1">Ceará</a></td>
+                <td class="num">9 240 580</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Par%C3%A1">Pará</a></td>
+                <td class="num">8 777 124</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Santa_Catarina">Santa Catarina</a></td>
+                <td class="num">7 338 473</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Goi%C3%A1s">Goiás</a></td>
+                <td class="num">7 206 589</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Maranh%C3%A3o">Maranhão</a></td>
+                <td class="num">7 153 262</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Amazonas">Amazonas</a></td>
+                <td class="num">4 269 995</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Esp%C3%ADrito_Santo_(estado)">Espírito Santo</a></td>
+                <td class="num">4 108 508</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Para%C3%ADba">Paraíba</a></td>
+                <td class="num">4 059 905</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Mato_Grosso">Mato Grosso	</a></td>
+                <td class="num">3 567 234</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Rio_Grande_do_Norte">Rio Grande do Norte</a></td>
+                <td class="num">3 560 903</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Alagoas">Alagoas</a></td>
+                <td class="num">3 365 351</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Piau%C3%AD">Piauí</a></td>
+                <td class="num">3 289 290</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Distrito_Federal_(Brasil)">Distrito Federal</a></td>
+                <td class="num">3 094 325</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Mato_Grosso_do_Sul">Mato Grosso do Sul</a></td>
+                <td class="num">2 839 188</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Sergipe">Sergipe</a></td>
+                <td class="num">2 338 474</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Rond%C3%B4nia">Rondônia</a></td>
+                <td class="num">1 815 278</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Tocantins">Tocantins</a></td>
+                <td class="num">1 607 363</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Acre">Acre</a></td>
+                <td class="num">906 876</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Amap%C3%A1">Amapá</a></td>
+                <td class="num">877 613</td>
+            </tr>
+            <tr>
+                <td><a href="https://pt.wikipedia.org/wiki/Roraima">Roraima</a></td>
+                <td class="num">652 713</td>
+            </tr>
         </tbody>
         <tfoot>
             <tr>
                 <th>Total de Habitantes</th>
-                <td>0000</td>
+                <td class="num"><strong>210.147.125</strong></td>
             </tr>
-
         </tfoot>
     </table>
 </body>
