--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -15,6 +15,12 @@
             color: #fff;
         }
 
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: rgb(73, 73, 73);
+        }
+
         caption {
             font-size: 1.2em;
             font-weight: bolder;
@@ -25,6 +31,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         tbody > tr:nth-child(even) {
@@ -185,7 +192,33 @@
                 <th scope="row">Total de Habitantes</th>
                 <td class="num"><strong>210.147.125</strong></td>
             </tr>
+
+
+
         </tfoot>
     </table>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati dicta enim vel et ex adipisci, aut non nulla voluptate deleniti id corrupti ut at maiores sunt officia, quis tempore quasi!Loremlorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptates quam in? Eaque provident quos nobis sit, molestias ullam. Porro quam cupiditate sapiente dicta corporis itaque non at impedit dignissimos?</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati dicta enim vel et ex adipisci, aut non nulla voluptate deleniti id corrupti ut at maiores sunt officia, quis tempore quasi!Loremlorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptates quam in? Eaque provident quos nobis sit, molestias ullam. Porro quam cupiditate sapiente dicta corporis itaque non at impedit dignissimos?</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati dicta enim vel et ex adipisci, aut non nulla voluptate deleniti id corrupti ut at maiores sunt officia, quis tempore quasi!Loremlorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptates quam in? Eaque provident quos nobis sit, molestias ullam. Porro quam cupiditate sapiente dicta corporis itaque non at impedit dignissimos?</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati dicta enim vel et ex adipisci, aut non nulla voluptate deleniti id corrupti ut at maiores sunt officia, quis tempore quasi!Loremlorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptates quam in? Eaque provident quos nobis sit, molestias ullam. Porro quam cupiditate sapiente dicta corporis itaque non at impedit dignissimos?</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati dicta enim vel et ex adipisci, aut non nulla voluptate deleniti id corrupti ut at maiores sunt officia, quis tempore quasi!Loremlorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptates quam in? Eaque provident quos nobis sit, molestias ullam. Porro quam cupiditate sapiente dicta corporis itaque non at impedit dignissimos?</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati dicta enim vel et ex adipisci, aut non nulla voluptate deleniti id corrupti ut at maiores sunt officia, quis tempore quasi!Loremlorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptates quam in? Eaque provident quos nobis sit, molestias ullam. Porro quam cupiditate sapiente dicta corporis itaque non at impedit dignissimos?</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati dicta enim vel et ex adipisci, aut non nulla voluptate deleniti id corrupti ut at maiores sunt officia, quis tempore quasi!Loremlorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptates quam in? Eaque provident quos nobis sit, molestias ullam. Porro quam cupiditate sapiente dicta corporis itaque non at impedit dignissimos?</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati dicta enim vel et ex adipisci, aut non nulla voluptate deleniti id corrupti ut at maiores sunt officia, quis tempore quasi!Loremlorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptates quam in? Eaque provident quos nobis sit, molestias ullam. Porro quam cupiditate sapiente dicta corporis itaque non at impedit dignissimos?</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati dicta enim vel et ex adipisci, aut non nulla voluptate deleniti id corrupti ut at maiores sunt officia, quis tempore quasi!Loremlorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptates quam in? Eaque provident quos nobis sit, molestias ullam. Porro quam cupiditate sapiente dicta corporis itaque non at impedit dignissimos?</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati dicta enim vel et ex adipisci, aut non nulla voluptate deleniti id corrupti ut at maiores sunt officia, quis tempore quasi!Loremlorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptates quam in? Eaque provident quos nobis sit, molestias ullam. Porro quam cupiditate sapiente dicta corporis itaque non at impedit dignissimos?</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati dicta enim vel et ex adipisci, aut non nulla voluptate deleniti id corrupti ut at maiores sunt officia, quis tempore quasi!Loremlorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptates quam in? Eaque provident quos nobis sit, molestias ullam. Porro quam cupiditate sapiente dicta corporis itaque non at impedit dignissimos?</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati dicta enim vel et ex adipisci, aut non nulla voluptate deleniti id corrupti ut at maiores sunt officia, quis tempore quasi!Loremlorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptates quam in? Eaque provident quos nobis sit, molestias ullam. Porro quam cupiditate sapiente dicta corporis itaque non at impedit dignissimos?</p>
 </body>
 </html>
