--- a/exercicios/ex023/Tabela005.html
+++ b/exercicios/ex023/Tabela005.html
@@ -9,7 +9,6 @@
         body {
             font-family: Arial, Helvetica, sans-serif;
         }
-
         table {
             border-collapse: collapse;
         }
@@ -22,144 +21,153 @@
 
         th, td {
             border: 1px solid black;
-            padding: 10px;
+            padding: 8px;
         }
 
         tr:nth-child(even) {
-            background-color: rgb(228, 228, 228);
+            background-color: lightgray;
+        }
+
+        div#container {
+            overflow-x: scroll;
         }
     </style>
 </head>
 <body>
-    <h1>Tabelas em Telas pequenas</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos excepturi distinctio ipsam? Omnis nostrum vero quasi veritatis, explicabo a officiis enim distinctio similique sapiente reprehenderit eaque aliquid dolore repudiandae cumque!</p>
+    <h1>Tabelas em telas pequenas</h1>
 
-    <table>
-        <caption>Tabelas Responsivas</caption>
-        <thead>
-            <tr>
-                <th>Produto</th>
-                <th>Jan</th>
-                <th>Fev</th>
-                <th>Mar</th>
-                <th>Abr</th>
-                <th>Mai</th>
-                <th>Jun</th>
-                <th>Jul</th>
-                <th>Ago</th>
-                <th>Set</th>
-                <th>Out</th>
-                <th>Nov</th>
-                <th>Dez</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th>TV 40°</th>
-                <td>01</td>
-                <td>04</td>
-                <td>07</td>
-                <td>12</td>
-                <td>12</td>
-                <td>10</td>
-                <td>05</td>
-                <td>02</td>
-                <td>01</td>
-                <td>01</td>
-                <td>04</td>
-                <td>16</td>
-            </tr>
-            <tr>
-                <th>Home Theater</th>
-                <td>01</td>
-                <td>04</td>
-                <td>07</td>
-                <td>12</td>
-                <td>12</td>
-                <td>10</td>
-                <td>05</td>
-                <td>02</td>
-                <td>01</td>
-                <td>01</td>
-                <td>04</td>
-                <td>16</td>
-            </tr>
-            <tr>
-                <th>Samsung Galaxy S20</th>
-                <td>01</td>
-                <td>04</td>
-                <td>07</td>
-                <td>12</td>
-                <td>12</td>
-                <td>10</td>
-                <td>05</td>
-                <td>02</td>
-                <td>01</td>
-                <td>01</td>
-                <td>04</td>
-                <td>16</td>
-            </tr>
-            <tr>
-                <th>Ipad Mini</th>
-                <td>01</td>
-                <td>04</td>
-                <td>07</td>
-                <td>12</td>
-                <td>12</td>
-                <td>10</td>
-                <td>05</td>
-                <td>02</td>
-                <td>01</td>
-                <td>01</td>
-                <td>04</td>
-                <td>16</td>
-            </tr>
-            <tr>
-                <th>PlayStation4</th>
-                <td>01</td>
-                <td>04</td>
-                <td>07</td>
-                <td>12</td>
-                <td>12</td>
-                <td>10</td>
-                <td>05</td>
-                <td>02</td>
-                <td>01</td>
-                <td>01</td>
-                <td>04</td>
-                <td>16</td>
-            </tr>
-            <tr>
-                <th>Lava louças</th>
-                <td>01</td>
-                <td>04</td>
-                <td>07</td>
-                <td>12</td>
-                <td>12</td>
-                <td>10</td>
-                <td>05</td>
-                <td>02</td>
-                <td>01</td>
-                <td>01</td>
-                <td>04</td>
-                <td>16</td>
-            </tr>
-            <tr>
-                <th>Amazon Echo</th>
-                <td>01</td>
-                <td>04</td>
-                <td>07</td>
-                <td>12</td>
-                <td>12</td>
-                <td>10</td>
-                <td>05</td>
-                <td>02</td>
-                <td>01</td>
-                <td>01</td>
-                <td>04</td>
-                <td>16</td>
-            </tr>
-        </tbody>
-    </table>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, fugiat delectus fuga doloremque autem, saepe quaerat atque non magnam ad voluptatum ut in officiis labore voluptatibus facilis perspiciatis dolores quam?</p>
+
+    <div div="container">
+        <table>
+            <caption>Tabelas responsivas</caption>
+            <thead>
+                <tr>
+                    <th>Produto</th>
+                    <th>Jan</th>
+                    <th>Fev</th>
+                    <th>Mar</th>
+                    <th>Abr</th>
+                    <th>Mai</th>
+                    <th>Jun</th>
+                    <th>Jul</th>
+                    <th>Ago</th>
+                    <th>Set</th>
+                    <th>Out</th>
+                    <th>Nov</th>
+                    <th>Dez</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Tv 40°</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>12</td>
+                    <td>10</td>
+                    <td>05</td>
+                    <td>02</td>
+                    <td>01</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>16</td>
+                </tr>
+                <tr>
+                    <td>Home Theader</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>12</td>
+                    <td>10</td>
+                    <td>05</td>
+                    <td>02</td>
+                    <td>01</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>16</td>
+                </tr>
+                <tr>
+                    <td>Samsung Galaxy S20</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>12</td>
+                    <td>10</td>
+                    <td>05</td>
+                    <td>02</td>
+                    <td>01</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>16</td>
+                </tr>
+                <tr>
+                    <td>Ipad Mini</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>12</td>
+                    <td>10</td>
+                    <td>05</td>
+                    <td>02</td>
+                    <td>01</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>16</td>
+                </tr>
+                <tr>
+                    <td>Playstation 4</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>12</td>
+                    <td>10</td>
+                    <td>05</td>
+                    <td>02</td>
+                    <td>01</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>16</td>
+                </tr>
+                <tr>
+                    <td>Lava Louça</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>12</td>
+                    <td>10</td>
+                    <td>05</td>
+                    <td>02</td>
+                    <td>01</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>16</td>
+                </tr>
+                <tr>
+                    <td>Amazon Echo</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>12</td>
+                    <td>10</td>
+                    <td>05</td>
+                    <td>02</td>
+                    <td>01</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>16</td>
+                </tr>
+            </tbody>
+            <tfoot>
+            </tfoot>
+        </table>
+    </div>
 </body>
 </html>
