--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testando o uso de um iframe</title>
+    <title>Estudos de iframe</title>
 </head>
 <body>
     <h1>Testando o uso de iframe</h1>
-    <p>Acessando o site do 
 
-        <iframe src="https://www.cursoemvideo.com/" frameborder="0"></iframe>
-        
-    CursoemVideo para aprender a programar.</p>
+    <p>Acessando o site do <iframe src="https://www.cursoemvideo.com/" frameborder="0"></iframe> para aprender a programar.</p>
 
     <p>O site do <iframe src="https://www.google.com.br/" frameborder="0"></iframe> também é muito legal</p>
 </body>
