--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de Iframe</title>
+    <style>
+        iframe {
+            width: 400px;
+            height: 400px;
+            border: 1px dashed black;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de Iframe</h1>
+
+    <p>Acessando o site do 
+        <iframe src="https://www.cursoemvideo.com" frameborder="0" height="500px" width="500px" >
+            <a href="https://www.cursoemvideo.com" target="_blank">Curso em Video</a>
+        </iframe>
+
+     para aprender a programar</p>
+
+    <p>o repositório do Guanabara 
+
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0" height="500px" width="500px">
+            <a href="https://gustavoguanabara.github.io" target="_blank">GitHub</a>
+        </iframe>
+    </p>
 </body>
 </html>
