--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -5,6 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iframe</title>
+    <style>
+        *{
+            margin: 0px;
+            padding: 0px;
+        }
+
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        h1 {
+            padding: 10px;
+        }
+
+        p {
+            line-height: 2em;
+        }
+
+        iframe {
+            display: block;
+            margin: auto;
+            width: 700px;
+        }
+    </style>
 </head>
 <body>
     <h1>teste com iframe</h1>
@@ -12,7 +36,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, odit ipsum alias magnam, eaque quis inventore quod unde sapiente, recusandae exercitationem sunt enim molestiae facere quo! Expedita provident labore recusandae!
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti quidem dolor perferendis esse vitae debitis nobis magnam. Eligendi, nisi accusantium vel, reprehenderit excepturi corporis inventore ducimus fuga ex, rem dolores!
 
-        <iframe src="https://gustavoguanabara.github.io" frameborder="0" height="500px" width="500px"></iframe>
+        <iframe src="pag001.html" frameborder="0" height="500px" width="500px"></iframe>
     </p>
 </body>
 </html>
