--- a/exercicios/ex024/siteteste.html
+++ b/exercicios/ex024/siteteste.html
@@ -5,8 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        iframe {
+            height: 500px;
+            width: 98vw;
+            border: 2px solid black;
+        }
+        
+    </style>
 </head>
 <body>
-    
+    <h1>Abrindo sites por um <strong>Iframe</strong></h1>
+
+    <ul>
+        <li><a href="https://animesup.biz/" target="frame">Anime plus</a></li>
+        <li><a href="https://gamesfull.app/" target="frame">1115 JUEGOS DISPONIBLES</a></li>
+        <li><a href="https://www.msi.com/Landing/dragon-center-download/nb" target="frame">MSI</a></li>
+        <li><a href="https://anizero.site/" target="frame">Animezero</a></li>
+    </ul>
+
+    <iframe srcdoc="Clique em uma das opções a cima."  name="frame"></iframe>
 </body>
 </html>
